fixed the grid and got text aligned!

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 
+@media only screen and (min-width: 600px) {
+  .img-bg{
+    background-image: url("https://image.freepik.com/free-photo/dark-black-brick-wall-has-rough-surface-as-background-image_99266-240.jpg");
+    width: 100%;
+    height:auto;
+  }
+}
 
-/* .img-bg{
-  background-image: ;
-  width: 100%;
-  height:auto;
-
-} */
 button{
   width: 85px;
 }
